--- a/examples/beerqa/requirements.txt
+++ b/examples/beerqa/requirements.txt
@@ -41,6 +41,10 @@ comm==0.2.2
     # via
     #   ipykernel
     #   ipywidgets
+contourpy==1.3.0
+    # via matplotlib
+cycler==0.12.1
+    # via matplotlib
 debugpy==1.8.6
     # via ipykernel
 decorator==5.1.1
@@ -51,6 +55,8 @@ executing==2.1.0
     # via stack-data
 fastjsonschema==2.20.0
     # via nbformat
+fonttools==4.54.1
+    # via matplotlib
 fqdn==1.5.1
     # via jsonschema
 h11==0.14.0
@@ -146,10 +152,14 @@ jupyterlab-server==2.27.3
     #   notebook
 jupyterlab-widgets==3.0.13
     # via ipywidgets
+kiwisolver==1.4.7
+    # via matplotlib
 markupsafe==3.0.0
     # via
     #   jinja2
     #   nbconvert
+matplotlib==3.9.2
+    # via -r requirements.in
 matplotlib-inline==0.1.7
     # via
     #   ipykernel
@@ -176,7 +186,11 @@ notebook-shim==0.2.4
     #   jupyterlab
     #   notebook
 numpy==2.1.2
-    # via scipy
+    # via
+    #   -r requirements.in
+    #   contourpy
+    #   matplotlib
+    #   scipy
 overrides==7.7.0
     # via jupyter-server
 packaging==24.1
@@ -185,6 +199,7 @@ packaging==24.1
     #   jupyter-server
     #   jupyterlab
     #   jupyterlab-server
+    #   matplotlib
     #   nbconvert
 pandocfilters==1.5.1
     # via nbconvert
@@ -192,6 +207,8 @@ parso==0.8.4
     # via jedi
 pexpect==4.9.0
     # via ipython
+pillow==10.4.0
+    # via matplotlib
 platformdirs==4.3.6
     # via jupyter-core
 prometheus-client==0.21.0
@@ -215,10 +232,13 @@ pygments==2.18.0
     #   ipython
     #   jupyter-console
     #   nbconvert
+pyparsing==3.1.4
+    # via matplotlib
 python-dateutil==2.9.0.post0
     # via
     #   arrow
     #   jupyter-client
+    #   matplotlib
 python-json-logger==2.0.7
     # via jupyter-events
 pyyaml==6.0.2
