--- a/gateway/tests/e2e/tensorzero.toml
+++ b/gateway/tests/e2e/tensorzero.toml
@@ -80,6 +80,15 @@ model_id = "claude-3-haiku@20240307"
 location = "us-central1"
 project_id = "tensorzero-public"
 
+[models.claude-3-5-sonnet-20240620-gcp-vertex]
+routing = ["gcp_vertex_anthropic"]
+
+[models.claude-3-5-sonnet-20240620-gcp-vertex.providers.gcp_vertex_anthropic]
+type = "gcp_vertex_anthropic"
+model_id = "claude-3-5-sonnet@20240620"
+location = "us-central1"
+project_id = "tensorzero-public"
+
 [models."gemini-1.5-flash-001"]
 routing = ["gcp_vertex_gemini"]
 
@@ -370,6 +379,12 @@ model = "claude-3-haiku-20240307-gcp-vertex"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 
+[functions.basic_test.variants.gcp-vertex-sonnet]
+type = "chat_completion"
+model = "claude-3-5-sonnet-20240620-gcp-vertex"
+system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
+max_tokens = 100
+
 [functions.basic_test.variants.mistral]
 type = "chat_completion"
 model = "open-mistral-nemo-2407"
@@ -561,12 +576,12 @@ user_template = "../../fixtures/config/functions/json_success/prompt/user_templa
 json_mode = "on"
 max_tokens = 100
 
-[functions.json_success.variants.gcp-vertex-haiku-implicit]
+[functions.json_success.variants.gcp-vertex-sonnet]
 type = "chat_completion"
-model = "claude-3-haiku-20240307-gcp-vertex"
+model = "claude-3-5-sonnet-20240620-gcp-vertex"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
-json_mode = "implicit_tool"
+json_mode = "on"
 max_tokens = 100
 
 [functions.json_success.variants.google-ai-studio-gemini-flash-8b]
@@ -823,9 +838,25 @@ user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_templa
 json_mode = "on"
 max_tokens = 100
 
+[functions.dynamic_json.variants.gcp-vertex-sonnet]
+type = "chat_completion"
+model = "claude-3-5-sonnet-20240620-gcp-vertex"
+system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
+user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
+json_mode = "on"
+max_tokens = 100
+
 [functions.dynamic_json.variants.gcp-vertex-haiku-implicit]
 type = "chat_completion"
 model = "claude-3-haiku-20240307-gcp-vertex"
+system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
+user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
+json_mode = "implicit_tool"
+max_tokens = 100
+
+[functions.dynamic_json.variants.gcp-vertex-sonnet-implicit]
+type = "chat_completion"
+model = "claude-3-5-sonnet-20240620-gcp-vertex"
 system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
 json_mode = "implicit_tool"
@@ -1022,6 +1053,12 @@ max_tokens = 100
 [functions.weather_helper.variants.gcp-vertex-haiku]
 type = "chat_completion"
 model = "claude-3-haiku-20240307-gcp-vertex"
+system_template = "../../fixtures/config/functions/weather_helper/prompt/system_template.minijinja"
+max_tokens = 100
+
+[functions.weather_helper.variants.gcp-vertex-sonnet]
+type = "chat_completion"
+model = "claude-3-5-sonnet-20240620-gcp-vertex"
 system_template = "../../fixtures/config/functions/weather_helper/prompt/system_template.minijinja"
 max_tokens = 100
 
