added Anyhow and AnyhowError

--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -19,6 +19,7 @@ workspace = true
 
 
 [dependencies]
+anyhow = "1.0.93"
 async-stream = "0.3.5"
 aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
 aws-sdk-bedrockruntime = { version = "1.42.0", features = [
